--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,31 @@
 * {
-  background-color: rgb(217, 208, 219);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.landingpage {
-  display: inline-block; 
-  text-align: center;
 }
 
 footer {
   position: fixed; 
   bottom: 20px;
-  left: 20px
+  left: 20px;
+  font-size:xx-small;
+  color: rgba(30, 29, 29, 0.926);
+}
+
+header {
+  background-color:rgb(241, 234, 226);
+  color: rgba(30, 29, 29, 0.926);
+  border-color: rgb(255, 248, 239);
+  margin-bottom: 1cm;
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.links {
+  text-align: center;
+  margin: auto;
+  vertical-align: middle;
+}
+
+.project {
+  vertical-align: auto;
+  background-color: rgb(176, 175, 167);
 }
