--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,21 +11,54 @@ footer {
 }
 
 header {
-  background-color:rgb(241, 234, 226);
+  background-color:rgb(203, 215, 186);
   color: rgba(30, 29, 29, 0.926);
-  border-color: rgb(255, 248, 239);
-  margin-bottom: 1cm;
-  padding: 2rem 0;
   text-align: center;
+  padding-top: 10px;
+  padding-bottom: 5px;
 }
 
 .links {
-  text-align: center;
-  margin: auto;
-  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.members {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.linkitem {
+  margin-left: 30px;
+  margin-right: 30px;
+  font-size: medium;
 }
 
 .project {
   vertical-align: auto;
   background-color: rgb(176, 175, 167);
 }
+
+.CEO {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+a:link {
+  color: rgba(30, 29, 29, 0.85);
+  background-color: transparent;
+}
+
+a:visited {
+  color: rgba(30, 29, 29, 0.142);
+  background-color: transparent;
+}
+
+a:hover {
+  color: rgba(30, 29, 29, 0.142);
+  background-color: transparent;
+}
+
